--- a/app/src/main/res/layout/card_image.xml
+++ b/app/src/main/res/layout/card_image.xml
@@ -17,7 +17,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/fab_margin"
     android:text="Select"
-    android:textColor="@color/colorAccent"
+    android:textColor="@color/yellow"
     android:textSize="32sp"
     android:visibility="visible"
     app:layout_constraintEnd_toEndOf="parent"
