--- a/app/src/main/res/layout/card_image.xml
+++ b/app/src/main/res/layout/card_image.xml
@@ -11,15 +11,15 @@
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"/>
 
-  <CheckBox
-    android:id="@+id/discard_selection"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/fab_margin"
-    android:text="Select"
-    android:textSize="48sp"
-    android:visibility="gone"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+<!--  <CheckBox-->
+<!--    android:id="@+id/discard_selection"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_margin="@dimen/fab_margin"-->
+<!--    android:text="Select"-->
+<!--    android:textSize="48sp"-->
+<!--    android:visibility="gone"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
